--- a/ejercicios/ejercicio_Formulario/formulario.html
+++ b/ejercicios/ejercicio_Formulario/formulario.html
@@ -5,9 +5,52 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styleform.css">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <title>Login Form</title>
 </head>
 <body>
-    
+    <div class="container">
+        <h3>Registrate en el formulario</h3>
+        <div class="buttons">
+            <button class="google-btn">
+                <picture><img src="https://cdn1.iconfinder.com/data/icons/google-s-logo/150/Google_Icons-09-512.png" alt=""></picture>
+                <span>Registrarse con Google</span>
+            </button>
+            <button class="twitter-btn">
+                <picture>T</picture>
+            </button>
+        </div>
+        <div class="separator">
+            <hr>
+            <span>O...</span>
+            <hr>
+        </div>
+        <form action="" method="">
+            <div class="section-inputs">
+                <label for="name">
+                    <span>Name</span>
+                    <input class="text-input" type="text" id="name" name="name">
+                </label>
+                <label for="username">
+                        <span>Username</span>
+                        <input class="text-input" type="text" id="username" name="username">
+                </label>
+            </div>
+            <label for="email">
+                <span>Email</span>
+                <input class="text-input" type="email" id="email" name="email">
+            </label>
+            <label for="Password">
+                <span>Password</span>
+                <input class="text-input" type="password" id="Password" name="Password" placeholder="6+ caracteres">
+            </label>
+            <label for="checkbox" class="checkbox-label">
+                <input type="checkbox" id="checkbox">
+                <span>Acepto las condiciones y el aviso legal porque estoy de acuerdo un monton en este tema</span>
+            </label>
+            <button type="submit" class="submit-btn">Crear cuenta</button>
+        </form>
+    </div>
 </body>
 </html>
